# PyHYSPLIT

./: .gitignore  ENGINE_INTEGRATION_SUMMARY.md  GPU_MULTIPROCESSING_ENHANCEMENT.md  GPU_멀티프로세싱_구현_요약.md  OUTPUT_FORMAT_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_RECOMMENDATIONS.md  PHASE1_OPTIMIZATION_SUMMARY.md  PHASE2_OPTIMIZATION_SUMMARY.md  PHASE3PLUS_OPTIMIZATION_SUMMARY.md  PHASE3_OPTIMIZATION_SUMMARY.md  PHYSICS_IMPLEMENTATION_SUMMARY.md  PRODUCT_COMPARISON_ANALYSIS.md  Phase1_최적화_완료_보고서.md  README.md  pyproject.toml  requirements.txt  물리_과정_구현_완료_보고서.md  성능_개선_체크리스트.md  성능_최적화_최종_보고서.md  제품_비교_분석_요약.md  최종_성능_최적화_완료_보고서.md  출력_포맷_구현_완료_보고서.md
Docs/: HYSPLIT_정리_1.txt  HYSPLIT_정리_2.txt  HYSPLIT_정리_3.txt  HYSPLIT_정리_4.txt  HYSPLIT_정리_5.txt  HYSPLIT_정리_6.txt  HYSPLIT_추가_요구사항.md  Python HYSPLIT 패키지안.txt  Python에서 HYSPLIT과 1대1 검증 가능한 궤적 비교 예제.txt
benchmarks/: performance_benchmark.py
examples/: complete_workflow_with_output.py
profiling/: benchmark_optimizations.py  profile_performance.py
pyhysplit/: IMPORT_CLEANUP_SUMMARY.md  REORGANIZATION_PLAN.md  __init__.py
pyhysplit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyhysplit/analysis/: __init__.py  cluster_analysis.py  concentration_grid.py
pyhysplit/compute/: __init__.py  batch_processor.py  gpu_backend.py  parallel.py  particle_manager.py
pyhysplit/core/: __init__.py  engine.py  engine_vectorized.py  engine_vectorized_v2.py  integrator.py  interpolator.py  interpolator_gpu.py  interpolator_optimized.py  models.py
pyhysplit/data/: __init__.py  config_parser.py  met_reader.py  (+1 more)
(+1060 files in other folders)
